@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)lex.c	2.76 (gritter) 10/28/04";
+static char sccsid[] = "@(#)lex.c	2.77 (gritter) 10/31/04";
 #endif
 #endif /* not lint */
 
@@ -175,10 +175,15 @@ setfile(char *name, int newmail)
 		mb.mb_type = MB_FILE;
 		mb.mb_perm = MB_DELE|MB_EDIT;
 		mb.mb_compressed = compressed;
-		if ((i = open(name, O_WRONLY)) < 0 && !mb.mb_compressed)
-			mb.mb_perm = 0;
-		else
-			close(i);
+		if (compressed) {
+			if (compressed & 0200)
+				mb.mb_perm = 0;
+		} else {
+			if ((i = open(name, O_WRONLY)) < 0)
+				mb.mb_perm = 0;
+			else
+				close(i);
+		}
 		if (shudclob) {
 			if (mb.mb_itf) {
 				fclose(mb.mb_itf);
